# pdf-splitter-desktop

./: .gitignore  PDF拆分工具设计方案.md  README.md  index.html  package-lock.json  package.json  start-dev.sh
python_engine/: __init__.py  bookmark_extractor.py  chat_handler.py  chunk_analyzer.py  cli.py  error_handler.py  filename_generator.py  llm_client.py  main_processor.py  pdf_engine.py  pdf_extractor.py  pdf_splitter.py  progress_reporter.py  prompt_templates.py  requirements.txt
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test pdf 1/: PDF拆分逻辑说明.md
tests/: test_strategies.py
